--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,40 @@ jobs:
       - run:
           name: Run Test and Coverage
           command: npm test 
+  deploy:
+    docker:
+      - image: circleci/node:10
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Setup Dependencies
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - run:
+          name: Run Test and Coverage
+          command: npm test 
+      - run:
+          name: Build Package
+          command: npm run build
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master --force
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: feature/ci_cd
