--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,15 +33,12 @@ jobs:
           paths:
             - ./node_modules
       - run:
-          name: Run Test and Coverage
-          command: npm test 
-      - run:
           name: Build Package
           command: npm run build
       - run:
           name: Deploy Master to Heroku
           command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master --force
 
 workflows:
   version: 2
@@ -51,6 +48,6 @@ workflows:
       - deploy:
           requires:
             - build
-          filters:
-            branches:
-              only: master
+          # filters:
+          #   branches:
+          #     only: master
