--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rebay",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
+    "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
